--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   get_it: ^7.6.7
   flutter_spinkit: ^5.2.0
   cached_network_image: ^3.3.1
+  shimmer: ^3.0.0
   go_router: ^13.1.0
 dev_dependencies:
   flutter_test:
