--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   cached_network_image: ^3.3.1
   shimmer: ^3.0.0
+  url_launcher: ^6.2.4
   go_router: ^13.1.0
 dev_dependencies:
   flutter_test:
