--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   shimmer: ^3.0.0
   url_launcher: ^6.2.4
   go_router: ^13.1.0
+  gap: ^3.0.1
+  flutter_screenutil: ^5.9.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
